Some progress but query parameter types are borked and pagination does nothing. Yet.
